wrap show-more-btn and scrollToTopButton to prevent full witdh strech

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -148,7 +148,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1350px;
     margin: 0 auto;
     margin-bottom: var(--spacing-xl);
     margin-top: var(--spacing-3xl);
@@ -181,6 +181,11 @@
     background-color: var(--color-dark-accent);
     color: var(--color-background);
     cursor: pointer;
+}
+
+.show-more-wrapper {
+    display: flex;
+    justify-content: center;
     margin-bottom: var(--spacing-2xl);
 }
 
